feat: Implement comprehensive SEO metadata and broaden platform scope to include freelancers and developers.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,75 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ProjXchange - Student Project Marketplace</title>
+
+  <!-- Primary Meta Tags -->
+  <title>ProjXchange - Freelancer & Developer Marketplace</title>
+  <meta name="title" content="ProjXchange - Freelancer & Developer Marketplace for Students" />
+  <meta name="description"
+    content="A marketplace connecting students, freelancers, and developers. Buy quality projects or sell your work. Join 10,000+ students, freelancers & developers earning and learning today." />
+  <meta name="keywords"
+    content="student projects, freelance marketplace, developer projects, buy code, sell projects, programming marketplace, development projects, student marketplace, freelancer platform" />
+  <meta name="author" content="ProjXchange" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://projxchange.com/" />
+  <meta property="og:title" content="ProjXchange - Marketplace for Students, Freelancers & Developers" />
+  <meta property="og:description"
+    content="A marketplace connecting students, freelancers, and developers. Buy quality projects or sell your work. Join 10,000+ users today." />
+  <meta property="og:image" content="https://projxchange.com/og-image.jpg" />
+  <meta property="og:site_name" content="ProjXchange" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://projxchange.com/" />
+  <meta property="twitter:title" content="ProjXchange - Marketplace for Students, Freelancers & Developers" />
+  <meta property="twitter:description"
+    content="Buy quality projects or sell your work. Join 10,000+ students, freelancers & developers." />
+  <meta property="twitter:image" content="https://projxchange.com/og-image.jpg" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://projxchange.com/" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "ProjXchange",
+    "url": "https://projxchange.com",
+    "description": "A marketplace connecting students, freelancers, and developers with quality development projects",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://projxchange.com/projects?search={search_term_string}"
+      },
+      "query-input": "required name=search_term_string"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "ProjXchange",
+      "url": "https://projxchange.com"
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "ProjXchange",
+    "url": "https://projxchange.com",
+    "logo": "https://projxchange.com/logo.png",
+    "description": "Marketplace for students, freelancers, and developers to buy and sell quality development projects",
+    "sameAs": [
+      "https://twitter.com/projxchange",
+      "https://facebook.com/projxchange"
+    ]
+  }
+  </script>
 </head>
 
 <body>
