chore: Update marketing copy by generalizing numerical statistics and removing the money-back guarantee across various pages and meta tags.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>ProjXchange - Freelancer & Developer Marketplace</title>
   <meta name="title" content="ProjXchange - Freelancer & Developer Marketplace for Students" />
   <meta name="description"
-    content="A marketplace connecting students, freelancers, and developers. Buy quality projects or sell your work. Join 10,000+ students, freelancers & developers earning and learning today." />
+    content="A marketplace connecting students, freelancers, and developers. Buy quality projects or sell your work. Start earning and learning today." />
   <meta name="keywords"
     content="student projects, freelance marketplace, developer projects, buy code, sell projects, programming marketplace, development projects, student marketplace, freelancer platform" />
   <meta name="author" content="ProjXchange" />
@@ -21,7 +21,7 @@
   <meta property="og:url" content="https://projxchange.com/" />
   <meta property="og:title" content="ProjXchange - Marketplace for Students, Freelancers & Developers" />
   <meta property="og:description"
-    content="A marketplace connecting students, freelancers, and developers. Buy quality projects or sell your work. Join 10,000+ users today." />
+    content="A marketplace connecting students, freelancers, and developers. Buy quality projects or sell your work." />
   <meta property="og:image" content="https://projxchange.com/og-image.jpg" />
   <meta property="og:site_name" content="ProjXchange" />
 
@@ -30,7 +30,7 @@
   <meta property="twitter:url" content="https://projxchange.com/" />
   <meta property="twitter:title" content="ProjXchange - Marketplace for Students, Freelancers & Developers" />
   <meta property="twitter:description"
-    content="Buy quality projects or sell your work. Join 10,000+ students, freelancers & developers." />
+    content="Buy quality projects or sell your work. Join students, freelancers & developers." />
   <meta property="twitter:image" content="https://projxchange.com/og-image.jpg" />
 
   <!-- Canonical URL -->
